@@ -54,12 +54,6 @@ compileKotlin {
 
 classes.dependsOn compileKotlin
 
-def toolingApiBuildersJar = (project as ProjectInternal).services.get(ModuleRegistry.class)
-        .getModule("gradle-tooling-api-builders")
-        .classpath
-        .asFiles
-        .first()
-
 dependencies {
     implementation project(path: ':instrumentation', configuration: 'shadow')
     implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
@@ -76,77 +70,50 @@ dependencies {
     compileOnly localGroovy()
     compileOnly 'com.google.guava:guava:' + project.versions.java.guava
 
-    // testImplementation(project)
     testImplementation project(path: ':instrumentation', configuration: 'default')
-    testImplementation gradleApi()
-    testImplementation gradleTestKit()
     testImplementation 'com.android.tools.build:gradle:' + project.versions.agp.plugin
-    testImplementation 'com.android.tools.build:gradle-api:' + project.versions.agp.gradleApi
     testImplementation 'commons-io:commons-io:' + project.versions.java.commonsIO
     testImplementation 'com.google.guava:guava:' + project.versions.java.guava
+
     testImplementation 'junit:junit:' + project.versions.test.junit
     testImplementation 'org.junit.jupiter:junit-jupiter-api:' + project.versions.test.jupiter
     testImplementation 'org.junit.jupiter:junit-jupiter:' + project.versions.test.jupiter
     testImplementation 'org.junit.vintage:junit-vintage-engine:' + project.versions.test.jupiter
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     testImplementation 'org.mockito:mockito-core:' + project.versions.test.mockitoCore
-    testImplementation platform("org.spockframework:spock-bom:2.3-groovy-3.0")
-    testImplementation('org.spockframework:spock-core:2.3-groovy-3.0') {
-        exclude group: 'org.codehaus.groovy'
-    }
 
-    // integrations
-    integrationImplementation(project)
-    integrationImplementation project(path: ':instrumentation', configuration: 'default')
-    integrationImplementation gradleApi()
+    // integration tests
     integrationImplementation gradleTestKit()
-    integrationImplementation 'com.android.tools.build:gradle:' + project.versions.agp.plugin
-    integrationImplementation 'com.android.tools.build:gradle-api:' + project.versions.agp.gradleApi
-    integrationImplementation 'commons-io:commons-io:' + project.versions.java.commonsIO
-    integrationImplementation 'com.google.guava:guava:' + project.versions.java.guava
-    integrationImplementation 'org.junit.jupiter:junit-jupiter:' + project.versions.test.jupiter
-    integrationImplementation 'org.junit.vintage:junit-vintage-engine:' + project.versions.test.jupiter
-    integrationImplementation 'org.mockito:mockito-core:' + project.versions.test.mockitoCore
-    integrationImplementation platform("org.spockframework:spock-bom:2.3-groovy-3.0")
-    integrationImplementation('org.spockframework:spock-core:2.3-groovy-3.0') {
-        exclude group: 'org.codehaus.groovy'
-    }
+    // this is unnecessary in Gradle 7.6 and higher
+    def toolingApiBuildersJar = (project as ProjectInternal).services.get(ModuleRegistry.class)
+            .getModule("gradle-tooling-api-builders")
+            .classpath
+            .asFiles
+            .first()
+    integrationImplementation(files(toolingApiBuildersJar))
 
-    // end-to-end, regressions
-    functionalImplementation(project)
-    functionalImplementation project(path: ':instrumentation', configuration: 'default')
-    functionalImplementation gradleApi()
+    // end-to-end and regression tests
     functionalImplementation gradleTestKit()
-    functionalImplementation 'com.android.tools.build:gradle:' + project.versions.agp.plugin
-    functionalImplementation 'com.android.tools.build:gradle-api:' + project.versions.agp.gradleApi
-    functionalImplementation 'commons-io:commons-io:' + project.versions.java.commonsIO
-    functionalImplementation 'com.google.guava:guava:' + project.versions.java.guava
-    functionalImplementation 'org.junit.jupiter:junit-jupiter-api:' + project.versions.test.jupiter
-    functionalImplementation 'org.junit.jupiter:junit-jupiter:' + project.versions.test.jupiter
-    functionalImplementation 'org.junit.vintage:junit-vintage-engine:' + project.versions.test.jupiter
-    functionalImplementation 'org.mockito:mockito-core:' + project.versions.test.mockitoCore
     functionalImplementation platform("org.spockframework:spock-bom:2.3-groovy-3.0")
     functionalImplementation('org.spockframework:spock-core:2.3-groovy-3.0') {
         exclude group: 'org.codehaus.groovy'
     }
-
-    testRuntimeOnly(files(toolingApiBuildersJar))
-}
-
-tasks.withType(JavaCompile).configureEach {
-    dependsOn(":instrumentation:jar")
 }
 
 tasks.named("compileKotlin").configure {
     dependsOn(":instrumentation:jar")
 }
 
-tasks.withType(Test).configureEach {
-    useJUnitPlatform {
-        // includeEngines("junit-vintage")
-        // includeEngines("junit-jupiter")
-    }
+tasks.withType(JavaCompile).configureEach {
+    dependsOn(":instrumentation:jar")
+}
 
-    ["newrelic.agent.args", "newrelic.agent.version"].each {
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    failFast = true
+    minHeapSize = "1g"
+    maxHeapSize = "4g"
+    ["newrelic.agent.args", "newrelic.agent.version", "integrations", "regressions"].each {
         if (project.hasProperty(it)) {
             systemProperty it, project.property(it)
         }
@@ -158,16 +125,23 @@ tasks.withType(Test).configureEach {
     }
 }
 
+tasks.withType(Copy).all {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 test {
-    useJUnitPlatform {
-        // includeEngines("junit-vintage")
-        // includeEngines("junit-jupiter")
+    useJUnitPlatform()
+    failFast = true
+    minHeapSize = "1g"
+    maxHeapSize = "4g"
+    jvmArgs '-XX:MaxPermSize=4g'
+    testLogging {
+        events "skipped", "failed"
     }
-    maxHeapSize = '4G'
 }
 
 def integrationTestTask = tasks.register("integrationTests", Test) {
-    description = 'Runs the integration tests.'
+    description = 'Runs the integration test suite'
     group = "test"
     testClassesDirs = sourceSets.integration.output.classesDirs
     classpath = sourceSets.integration.runtimeClasspath
@@ -175,7 +149,7 @@ def integrationTestTask = tasks.register("integrationTests", Test) {
 }
 
 def functionalTestTask = tasks.register("functionalTests", Test) {
-    description = 'Runs the functional/regression tests.'
+    description = 'Runs the functional/regression test suite'
     group = "test"
     testClassesDirs = sourceSets.functional.output.classesDirs
     classpath = sourceSets.functional.runtimeClasspath
